# qt_iot_blog_samples

part3/: CMakeLists.txt  README.md
part3/common/: CMakeLists.txt  dds.pri
part3/sensor_publisher/: CMakeLists.txt  main.cpp
part3/sensor_publisher_qml/: CMakeLists.txt  main.qml  sensor_publisher_qml.pro  sensorinformation.cpp  sensorinformation.h
part3/sensor_subscriber/: CMakeLists.txt  main.cpp  sensor_subscriber.pro
